tests/snapshots/render/iterm2@commonmark-spec-103-setext_headings.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/103-setext_headings.md
snapshot_kind: text
---
Foo

]1337;SetMark\[1m[34mbar[0m
[1m[34m────────────────────────────────────────────────────────────────────────────────[0m

baz
